--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.5.2
+asgiref==3.6.0
 Django
 docutils
 lightgbm
@@ -17,3 +17,4 @@ sqlparse==0.4.2
 urllib3
 whitenoise==6.2.0
 python-decouple
+tzdata
